Add slides for talk on world conquest
Signed-off-by: Razvan Deaconescu <razvan.deaconescu@upb.ro>

--- a/include/simple.cls
+++ b/include/simple.cls
@@ -49,9 +49,9 @@
 
 % Romanian Language support
 \usepackage{ucs}
-\usepackage[utf8x]{inputenc}
+%\usepackage[utf8x]{inputenc}
 \PrerenderUnicode{aâîțșĂÎÂȚȘ}
-\usepackage[english,romanian]{babel}
+\usepackage[english]{babel}
 
 \usepackage{hyperref}   % use \url{http://$URL} or \href{http://$URL}{Name}
 \usepackage{underscore} % underscores need not be escaped
